<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background">



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <Button
            style="@style/AppTheme.main"
            android:gravity="center_horizontal"
            android:text="@string/button1"
            android:id="@+id/button1"
            android:onClick="gotoCurrent"
            >
        </Button>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <Button
            style="@style/AppTheme.main"
            android:gravity="center_horizontal"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:onClick="gotoTemp"
            >
        </Button>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <Button
            style="@style/AppTheme.main"
            android:gravity="center_horizontal"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:onClick="gotoLight"
            >
        </Button>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <Button
            style="@style/AppTheme.main"
            android:gravity="center_horizontal"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:onClick="gotoMoisture"
            >
        </Button>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <Button
            style="@style/AppTheme.main"
            android:gravity="center_horizontal"
            android:text="@string/button5"
            android:id="@+id/button5"
            android:onClick="gotoHumid"
            >
        </Button>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <Button
            style="@style/AppTheme.main"
            android:gravity="center_horizontal"
            android:text="@string/button6"
            android:id="@+id/button6"
            android:onClick="update"
            >
        </Button>
    </TableRow>
</TableLayout>
